basyx-k8s-manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: basyx
  labels:
    app.kubernetes.io/name: basyx
