basyx-k8s-manifests/50-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: basyx
spec:
  selector:
    app: mongo
  ports:
    - name: mongo
      port: 27017
      targetPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: aas-registry
  namespace: basyx
spec:
  selector:
    app: aas-registry
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: sm-registry
  namespace: basyx
spec:
  selector:
    app: sm-registry
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: aas-env
  namespace: basyx
spec:
  selector:
    app: aas-env
  ports:
    - name: http
      port: 8081
      targetPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: dashboard-api
  namespace: basyx
spec:
  selector:
    app: dashboard-api
  ports:
    - name: http
      port: 8085
      targetPort: 8085
---
apiVersion: v1
kind: Service
metadata:
  name: oas-proxy
  namespace: basyx
spec:
  selector: { app: oas-proxy }
  ports:
    - port: 8080
      targetPort: 8080
